# crazy-train

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: run.rs
src/: errors.rs  executer.rs  generator.rs  lib.rs  randomizer.rs  runner.rs  step.rs
src/snapshots/: crazy_train__runner__tests__can_dump_plan.snap
