[package]
name = "crazy-train"
version = "0.2.0"
edition = "2021"
description = "randomized and fuzz execution of command-line interfaces"
homepage = "https://docs.rs/crazy-train"
documentation = "https://docs.rs/crazy-train"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>", "Dotan Nahum <dotan@rng0.io>"]
repository = "https://github.com/loco-rs/crazy-train"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
rand = { version = "0.8" }
unicode-segmentation = "1.8"
duct_sh = { version = "0.13.7" }
thiserror = { version = "1" }
colored = { version = "2.1.0" }

[dev-dependencies]
